opam-version: "1.2"
name: "bmex"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bmex"
doc: "https://vbmithr.github.io/bmex/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/bmex.git"
bug-reports: "https://github.com/vbmithr/bmex/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "jbuilder" {build}
  "bs-api" {build}
]
depopts: []
build: [ "jbuilder" "build" "@install" ]
